Updates Made in this commit: .) Updates / refactoring count query
Next To Do:
.)

Previous Updates:
.)

Errors
.)